Modify command_app method in CommandProcessor class